# deshovka

./: .gitignore  CMakeLists.txt  README.md  _clang-format  build_wasm.sh  conanfile.py  configure_linux_default.sh  configure_qt_wasm.sh  configure_windows_default.bat  run_wasm.sh
frontend/: CMakeLists.txt
frontend/resources/: resources.qrc
frontend/resources/style/: application.qss
frontend/src/: main.cpp  main_window.cpp  main_window.hpp
frontend/src/home/: page.cpp  page.hpp
frontend/src/market/: page.cpp  page.hpp
frontend/src/shell/: content_container.cpp  content_container.hpp  title_bar.cpp  title_bar.hpp  title_bar_button.cpp  title_bar_button.hpp  ui_widget.hpp
frontend/ui/: main_window.ui
frontend/ui/home/: home_page.ui
frontend/ui/market/: market_page.ui
frontend/ui/shell/: title_bar.ui
